se traen datos por ajax y se muestran valores y calculos de UF

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AJAX</title>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="main.js"></script>
+	
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<h1 class="titulo">Simule su crédito</h1>
-	<h2>Ingrese su monto</h2>
-	<input type="hola">
+	<h2>Ingrese su monto:</h2>
+	<input type="text" id="monto" placeholder = "Monto en $" >
+	<h2>Ingrese cantidad de cuotas:</h2>
+	<input type="text" id="cuotas" placeholder = "n° de cuotas" >
+	<button id="btn">OK</button>
+	<div class="conversion">
+		<!-- <p>UF:</p>
+		<p>Dolar:</p> -->
+	</div>
+	<script src="main.js"></script>
 </body>
 </html>
